# admin-panel-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows-installer.yml
installer/: AdminPanelAutomation.iss
src/admin_panel_automation/: __init__.py  __main__.py  config.py  main.py  models.py  worker.py
src/admin_panel_automation/browser/: session.py
src/admin_panel_automation/gui/: main_window.py
src/admin_panel_automation/services/: admin_action.py  auth.py  chivalry_console.py  player_list.py
tools/: build_windows.ps1
tools/pyinstaller/: AdminPanelAutomation.spec
