[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "admin-panel-automation"
version = "0.1.0"
description = "Admin Panel Automation GUI"
requires-python = ">=3.11"
dependencies = [
  "playwright==1.46.0",
  "pyperclip==1.9.0",
  "pywinauto==0.6.8",
]

[project.scripts]
admin-panel-automation = "admin_panel_automation.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
